Remove other unwanted minified files... Update entity master to use a right bar for shortcuts and buttons and a button toolbar at the top for selection utilities e.g. selection toggle, delete selection etc.. Use tooltips for inputs without label on entity master. Fix <hr /> spacing.

--- a/app/style.css
+++ b/app/style.css
@@ -313,3 +313,11 @@ nav ul > div > li:hover > ul > li::before {
 .fc-sidebar li:not(:last-child) .btn {
     margin-bottom: 0.2em;
 }
+
+/*
+** Fix spacing.
+*/
+hr {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
